# solana-cli

./: .gitignore  Cargo.toml
src/: cli.rs  main.rs
src/cli/: mod.rs  wallet.rs
