[package]
name = "solana-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = "1.0.147"
serde_json = "1.0.87"
solana-client = "1.14.7"
solana-account-decoder = "1.14.7"
solana-sdk = "1.14.7"